feat: segments added
